<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalculatorActivity" >

    <TextView
        android:id="@+id/displayResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:maxHeight="70sp" />
    

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/displayResult"
        android:gravity="center"
        android:text="@string/seven"
        android:textSize="40sp" />

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/displayResult"
        android:layout_toRightOf="@id/seven"
        android:gravity="center"
        android:text="@string/eight"
        android:textSize="40sp" />

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/displayResult"
        android:layout_toRightOf="@id/eight"
        android:gravity="center"
        android:text="@string/nine"
        android:textSize="40sp" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/displayResult"
        android:layout_toRightOf="@id/nine"
        android:gravity="center"
        android:text="@string/divide"
        android:textSize="40sp" />

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/seven"
        android:gravity="center"
        android:text="@string/four"
        android:textSize="40sp" />

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eight"
        android:layout_toRightOf="@id/four"
        android:gravity="center"
        android:text="@string/five"
        android:textSize="40sp" />

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nine"
        android:layout_toRightOf="@id/five"
        android:gravity="center"
        android:text="@string/six"
        android:textSize="40sp" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/divide"
        android:layout_toRightOf="@id/six"
        android:gravity="center"
        android:text="@string/multiply"
        android:textSize="40sp" />

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/four"
        android:gravity="center"
        android:text="@string/one"
        android:textSize="40sp" />

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/five"
        android:layout_toRightOf="@id/one"
        android:gravity="center"
        android:text="@string/two"
        android:textSize="40sp" />

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/six"
        android:layout_toRightOf="@id/two"
        android:gravity="center"
        android:text="@string/three"
        android:textSize="40sp" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/multiply"
        android:layout_toRightOf="@id/three"
        android:gravity="center"
        android:text="@string/minus"
        android:textSize="40sp" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/one"
        android:gravity="center"
        android:text="@string/clear"
        android:textSize="40sp" />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/two"
        android:layout_toRightOf="@id/clear"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="40sp" />

    <Button
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/three"
        android:layout_toRightOf="@id/zero"
        android:gravity="center"
        android:text="@string/dot"
        android:textSize="40sp" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/minus"
        android:layout_toRightOf="@id/dot"
        android:gravity="center"
        android:text="@string/add"
        android:textSize="40sp" />

    <Button
        android:id="@+id/equal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clear"
        android:text="@string/equal"
        android:textSize="40sp" />
    
    <TextView 
        android:id="@+id/copyleft"
        android:text="@string/copyleft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/equal"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:textSize="12sp"
        />

</RelativeLayout>